testdata/baselines/reference/submodule/compiler/letDeclarations-scopes-duplicates5.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
file1.ts(1,7): error TS2451: Cannot redeclare block-scoped variable 'var1'.
file2.ts(1,7): error TS2451: Cannot redeclare block-scoped variable 'var1'.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== file1.ts (1 errors) ====
    const var1 = 0;
          ~~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'var1'.
!!! related TS6203 file2.ts:1:7: 'var1' was also declared here.
    
==== file2.ts (1 errors) ====
    const var1 = 0;
          ~~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'var1'.
!!! related TS6203 file1.ts:1:7: 'var1' was also declared here.